--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="Shop">
     <meta name="author" content="Łukasz Holeczek">
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,CSS,SCSS,HTML,RWD,Dashboard,React">
-    <title>CoreUI Free React.js Admin Template</title>
+    <title>CALTUX</title>
     <link rel="manifest" href="./manifest.json">
     <link rel="shortcut icon" href="./favicon.ico">
     <link rel="stylesheet" id="main_css" href="">
